--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@ layout: default
 title: Home
 slug: home
 ---
-<div class="jumbotron">
-  <h1>Hello, world!</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-</div>
+<section class="banner">
+  <div class="jumbotron overlay">
+    <div class="container text-center">
+      <p>
+        <img class="img-responsive center-block" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg" style="max-width: 25rem" alt="Logo">
+      <p>
+      <br>
+      <p><a href="mailto:hello@studiocraft.cc" class="btn btn-primary btn-lg">hello@studiocraft.cc</a></p>
+      <br>
+      <footer>
+        <address>
+          <strong>Studiocraft</strong><br>
+          171 East 74th St.<br>
+          New York, NY 10021<br>
+        </address>
+        <ul class="list-unstyled list-inline">
+          <li><a href="#"><i class="fa fa-fw fa-github fa-2x fa-inverse"></i></a></li>
+          <li><a href="#"><i class="fa fa-fw fa-twitter fa-2x fa-inverse"></i></a></li>
+          <li><a href="#"><i class="fa fa-fw fa-linkedin fa-2x fa-inverse"></i></a></li>
+      </footer>
+    </div>
+  </div>
+</section>
