fix overflow for banner and overlay

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ slug: home
       <footer>
         <address>
           <strong>Studiocraft</strong><br>
-          171 East 74th St.<br>
+          Upper East Side<br>
           New York, NY 10021<br>
         </address>
         <ul class="list-unstyled list-inline">
