--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ slug: home
           New York, NY 10021<br>
         </address>
         <ul class="list-unstyled list-inline">
-          <li><a href="#"><i class="fa fa-fw fa-github fa-2x fa-inverse"></i></a></li>
-          <li><a href="#"><i class="fa fa-fw fa-twitter fa-2x fa-inverse"></i></a></li>
-          <li><a href="#"><i class="fa fa-fw fa-linkedin fa-2x fa-inverse"></i></a></li>
+          <li><a href="https://github.com/studiocraft" target="_blank"><i class="fa fa-fw fa-github fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-fw fa-twitter fa-2x"></i></a></li>
+          <li><a href="#"><i class="fa fa-fw fa-linkedin fa-2x"></i></a></li>
       </footer>
     </div>
   </div>
