refactor for home banner

--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@ title: Home
 slug: home
 ---
 <section class="banner">
-  <div class="jumbotron overlay">
+  <div class="bg"></div>
+  <div class="overlay"></div>
+  <div class="jumbotron">
     <div class="container text-center">
-      <p>
-        <img class="img-responsive center-block" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg" style="max-width: 25rem" alt="Logo">
-      <p>
+      <p><img src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg" style="width:25rem"></p>
       <br>
-      <p><a href="mailto:hello@studiocraft.cc" class="btn btn-primary btn-lg">hello@studiocraft.cc</a></p>
+      <p><a class="btn btn-lg btn-primary" href="mailto:hello@studiocraft.cc" role="button">hello@studiocraft.cc</a></p>
       <br>
-      <footer>
-        <address>
-          <strong>Studiocraft</strong><br>
-          Upper East Side<br>
-          New York, NY 10021<br>
-        </address>
-        <ul class="list-unstyled list-inline">
-          <li><a href="https://github.com/studiocraft" target="_blank"><i class="fa fa-fw fa-github fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-fw fa-twitter fa-2x"></i></a></li>
-          <li><a href="#"><i class="fa fa-fw fa-linkedin fa-2x"></i></a></li>
-      </footer>
+      <address>
+        <strong>Studiocraft</strong><br>
+        Upper East Side<br>
+        New York, NY 10021<br>
+      </address>
+      <ul class="list-unstyled list-inline">
+        <li><a href="https://github.com/studiocraft" target="_blank"><i class="fa fa-lg fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-lg fa-linkedin"></i></a></li>
+      </ul>
     </div>
   </div>
+</section>
+<section class="container">
+  <p class="lead">Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</p>
 </section>
