format phone number

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ slug: home
         <p><strong>Studiocraft</strong><br>
         Upper East Side<br>
         New York, NY 10021<br></p>
-        <p><a href="callto:16468927292">+1 646 892 7292</a></p>
+        <p><a href="callto:6468927292">(646) 892-7292</a></p>
       </address>
       <ul class="list-unstyled list-inline text-center">
         <li><a href="https://github.com/studiocraft" target="_blank"><i class="fa-fw fa fa-github"></i>GitHub</a></li>
