--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ slug: home
   </div>
 </section>
 <section id="about" class="container">
-  <h1>About Studiocraft</h1>
+  <h1>About</h1>
   <p class="page-header lead">Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</p>
   <div class="row">
     <div class="col-sm-4">
