jukebox controls url's

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@ slug: home
         <div id="jukebox" class="text-center">
           <audio preload="auto">Your browser does not support the audio element.</audio>
           <nav data-control="audio">
-            <a href="#" data-control="previous">
+            <a href="javascript:void(0)" data-control="previous">
               <i class="fa fa-fw fa-backward"></i>
               <span class="sr-only">Previous</span>
             </a>
-            <a href="#" data-control="pause">
+            <a href="javascript:void(0)" data-control="pause">
               <i class="fa fa-fw fa-pause"></i>
               <span class="sr-only">Pause</span>
             </a>
-            <a href="#" data-control="play">
+            <a href="javascript:void(0)" data-control="play">
               <i class="fa fa-fw fa-play"></i>
               <span class="sr-only">Play</span>
             </a>
-            <a href="#" data-control="next">
+            <a href="javascript:void(0)" data-control="next">
               <i class="fa fa-fw fa-forward"></i>
               <span class="sr-only">Next</span>
             </a>
@@ -59,7 +59,7 @@ slug: home
 </section>
 <section id="contact" class="container">
   <h1>Contact</h1>
-  <p class="page-header lead">Have a question, have a project, or just want to say hello? Call or fill out the contact form, and we'll get back to you as fast as humanly possible.</p>
+  <p class="page-header lead">Have a question, have a project, or just want to say <em>hello</em>? Get in touch.</p>
   <form class="row">
     <div class="col-sm-6">
       <div class="form-group">
@@ -78,15 +78,17 @@ slug: home
     </div>
     <div class="col-sm-6">
       <address class="text-center">
-        <p><strong>Studiocraft</strong><br>
-        Upper East Side<br>
-        New York, NY 10021<br></p>
-        <p><a href="callto:6468927292">(646) 892-7292</a></p>
+        <p>
+          <strong>Studiocraft</strong><br>
+          Upper East Side<br>
+          New York, NY 10021<br>
+        </p>
+        <p><a href="callto:6468927292"><i class="fa fa-fw fa-mobile-phone"></i>(646) 892-7292</a></p>
       </address>
       <ul class="list-unstyled list-inline text-center">
         <li><a href="https://github.com/studiocraft" target="_blank"><i class="fa-fw fa fa-github"></i>GitHub</a></li>
-        <li><a href="#" target="_blank"><i class="fa-fw fa fa-twitter"></i>Twitter</a></li>
-        <li><a href="#" target="_blank"><i class="fa-fw fa fa-linkedin"></i>LinkedIn</a></li>
+        <li><a href="#" target="_blank"><i class="fa fa-fw fa-twitter"></i>Twitter</a></li>
+        <li><a href="#" target="_blank"><i class="fa fa-fw fa-linkedin"></i>LinkedIn</a></li>
       </ul>
     </div>
   </form>
