--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@ layout: default
 title: Home
 slug: home
 ---
-<section id="about" class="container">
+<section>
+  <img class="logo animated fadeInDown" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
+  <ul class="inline">
+    <li>Custom Web Development</li>
+    <li>Microsites & Landing Pages</li>
+    <li>Branding & Identity</li>
+  </ul>
+  <p><a class="button" href="mailto:hello@studiocraft.cc">hello@studiocraft.cc</a></p>
+</section>
+<!-- <section id="about" class="container">
   <div class="row wow animated fadeInUp">
     <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
       <h1 class="page-header text-intro text-uppercase text-center">Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception</h1>
@@ -46,15 +55,23 @@ slug: home
         </div>
         <fieldset class="form-group form-group-lg" required>
           <label>Budget</label>
-          <label class="radio-inline">
-            <input type="radio" name="Budget" id="lowBudget" value="$3-5K">$3 - 5k
-          </label>
-          <label class="radio-inline">
-            <input type="radio" name="Budget" id="midBudget" value="$5-10k">$5 - 10k
-          </label>
-          <label class="radio-inline">
-            <input type="radio" name="Budget" id="highBudget" value="$10k+">$10k +
-          </label>
+          <div class="row">
+            <div class="col-sm-4">
+              <label class="radio-inline">
+                <input type="radio" name="Budget" id="lowBudget" value="$3-5K"><strong>$3 - 5k</strong>
+              </label>
+            </div>
+            <div class="col-sm-4">
+              <label class="radio-inline">
+                <input type="radio" name="Budget" id="midBudget" value="$5-10k"><strong>$5 - 10k</strong>
+              </label>
+            </div>
+            <div class="col-sm-4">
+              <label class="radio-inline">
+                <input type="radio" name="Budget" id="highBudget" value="$10k+"><strong>$10k +</strong>
+              </label>
+            </div>
+          </div>
         </fieldset>
         <div class="form-group form-group-lg">
           <label class="sr-only" for="Project Desrciption">Message</label>
@@ -72,11 +89,11 @@ slug: home
         <p><small>Upper East Side</small><br>New York, NY</p>
         <p><a href="callto:6468927292"><i class="fa fa-fw fa-mobile-phone"></i>(646) 892-7292</a></p>
       </address>
-      <!-- <ul class="list-unstyled list-inline text-center">
+      <ul class="list-unstyled list-inline text-center">
         <li><a href="https://github.com/studiocraft" target="_blank"><i class="fa-fw fa fa-github"></i>GitHub</a></li>
         <li><a href="#" target="_blank"><i class="fa fa-fw fa-twitter"></i>Twitter</a></li>
         <li><a href="#" target="_blank"><i class="fa fa-fw fa-linkedin"></i>LinkedIn</a></li>
-      </ul> -->
+      </ul>
     </div>
   </div>
-</section>
+</section> -->
