--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ slug: home
 ---
 <section>
   <img class="logo animated fadeInDown" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
-  <ul class="inline">
+  <ul class="inline animated zoomIn">
     <li>Custom Web Development</li>
     <li>Microsites & Landing Pages</li>
     <li>Branding & Identity</li>
   </ul>
-  <p><a class="button" href="mailto:hello@studiocraft.cc">hello@studiocraft.cc</a></p>
+  <p class="animated fadeInUp"><a class="button" href="mailto:hello@studiocraft.cc">hello@studiocraft.cc</a></p>
 </section>
 <!-- <section id="about" class="container">
   <div class="row wow animated fadeInUp">
