--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ slug: home
 ---
 <section>
   <object type="image/svg+xml" data="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg" class="logo animated fadeInDown"></object>
-  <ul class="inline animated zoomIn">
+  <ul class="inline animated fadeInUp">
     <li>Custom Web Development</li>
     <li>Microsites & Landing Pages</li>
     <li>Branding & Identity</li>
