--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@ title: Home
 slug: home
 ---
 <section>
-  <object type="image/svg+xml" data="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg" class="logo animated fadeInDown"></object>
-  <ul class="inline animated fadeInUp">
-    <li>Custom Web Development</li>
-    <li>Microsites & Landing Pages</li>
-    <li>Branding & Identity</li>
-  </ul>
-  <p class="animated fadeInUp"><a class="button" href="mailto:hello@studiocraft.cc">hello@studiocraft.cc</a></p>
+  <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
+  <a href="mailto:hello@studiocraft.cc">hello@studiocraft.cc</a>
+  <hr class="animated fadeInLeftBig">
 </section>
