--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@ title: Home
 slug: home
 ---
 <section>
-  <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
-  <a href="mailto:hello@studiocraft.cc">hello@studiocraft.cc</a>
-  <hr class="animated fadeInLeftBig">
+  <article>
+
+  </article>
+  <!-- <label>Custom web development</label>
+  <p>Every project has different requirements, audiences, and long-term goals. Studiocraft believes in building original and custom web sites.</p>
+  <label>Microsites &amp; landing pages</label>
+  <p>Studiocraft has a mobile first approach to provide a seamless user experience across phone, tablet, laptop, and desktop devices.</p>
+  <label>Branding &amp; Identity</label>
+  <p>Design is Studiocraft's core. We'll help brand — or rebrand — your image with versatile materials that are easily recognizable across many types of media.</p> -->
 </section>
