--- a/index.html
+++ b/index.html
@@ -4,13 +4,5 @@ title: Home
 slug: home
 ---
 <section>
-  <article>
-
-  </article>
-  <!-- <label>Custom web development</label>
-  <p>Every project has different requirements, audiences, and long-term goals. Studiocraft believes in building original and custom web sites.</p>
-  <label>Microsites &amp; landing pages</label>
-  <p>Studiocraft has a mobile first approach to provide a seamless user experience across phone, tablet, laptop, and desktop devices.</p>
-  <label>Branding &amp; Identity</label>
-  <p>Design is Studiocraft's core. We'll help brand — or rebrand — your image with versatile materials that are easily recognizable across many types of media.</p> -->
+  <p>Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</p>
 </section>
