--- a/index.html
+++ b/index.html
@@ -3,6 +3,34 @@ layout: default
 title: Home
 slug: home
 ---
-<section>
+<!-- <img src="https://source.unsplash.com/user/bcolosky/"> -->
+<!-- <section>
   <p>Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</p>
-</section>
+</section> -->
+<h1 id="urban"></h1>
+<div class="carousel" data-flickity='{ "lazyLoad": true }'>
+  <div class="carousel-cell" style="background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg')">
+    <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" /> -->
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
+  </div>
+  <div class="carousel-cell">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
+  </div>
+</div>
+<h1 id="art"></h1>
+<h1 id="furniture"></h1>
+<h1 id="contact"></h1>
