--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ slug: home
 </section> -->
 <h1 id="urban"></h1>
 <div class="carousel" data-flickity='{ "lazyLoad": true }'>
-  <div class="carousel-cell" style="background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg')">
-    <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" /> -->
+  <div class="carousel-cell" style="background-image:url('https://source.unsplash.com/user/bcolosky/')">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
+  <div class="carousel-cell" style="background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg')">
+    <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" /> -->
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
+  <div class="carousel-cell" style="background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg')">
+    <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" /> -->
   </div>
   <div class="carousel-cell">
     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
