photo filter categories

--- a/index.html
+++ b/index.html
@@ -3,34 +3,39 @@ layout: default
 title: Home
 slug: home
 ---
-<!-- <img src="https://source.unsplash.com/user/bcolosky/"> -->
-<!-- <section>
-  <p>Studiocraft focuses on design and technology as a broader approach to experience, product performance and consumer perception.</p>
-</section> -->
-<h1 id="urban"></h1>
-<div class="carousel" data-flickity='{ "lazyLoad": true }'>
-  <div class="carousel-cell" style="background-image:url('https://source.unsplash.com/user/bcolosky/')">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
+<div class="grid">
+  <div class="element-item street " data-category="street">
+    <h3 class="name">Tellurium</h3>
+    <p class="symbol">Te</p>
+    <p class="number">52</p>
+    <p class="weight">127.6</p>
   </div>
-  <div class="carousel-cell" style="background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg')">
-    <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" /> -->
+  <div class="element-item architecture " data-category="architecture">
+    <h3 class="name">Tellurium</h3>
+    <p class="symbol">Te</p>
+    <p class="number">52</p>
+    <p class="weight">127.6</p>
   </div>
-  <div class="carousel-cell" style="background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg')">
-    <!-- <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" /> -->
+  <div class="element-item nature " data-category="nature">
+    <h3 class="name">Tellurium</h3>
+    <p class="symbol">Te</p>
+    <p class="number">52</p>
+    <p class="weight">127.6</p>
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
+  <div class="element-item travel " data-category="travel">
+    <h3 class="name">Tellurium</h3>
+    <p class="symbol">Te</p>
+    <p class="number">52</p>
+    <p class="weight">127.6</p>
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
-  </div>
-  <div class="carousel-cell">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
+  <div class="element-item portrait " data-category="portrait">
+    <h3 class="name">Tellurium</h3>
+    <p class="symbol">Te</p>
+    <p class="number">52</p>
+    <p class="weight">127.6</p>
   </div>
 </div>
+
 <h1 id="art"></h1>
 <h1 id="furniture"></h1>
 <h1 id="contact"></h1>
