--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ title: Home
 slug: home
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
-  <h2 class="f1 mv0 measure-narrow lh-title wow animated fadeInUp">Strategy</h2>
-  <p class="f4 measure-wide lh-copy wow animated fadeIn">{{ site.title }}'s focus is on design and technology as a broader approaches to experience, product performance and consumer perception.</p>
-  <p class="measure lh-copy wow animated fadeIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <ul class="list pl0 mv4 measure-wide cf mid-gray wow animated fadeIn">
-    <label class="db f6 mv1 tracked light-silver b ttu">Services</label>
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Strategy</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on design and technology as a broader approach to experience, product performance and consumer perception.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="#">Strategy Keynotes<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} combines new tools with traditional research expertise to develop a deep understanding of the user's wants and needs, and to guide strategy, design and technology decisions.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Brand and identity planning</small></li>
     <li class="fl-ns w-50-ns"><small>Stakeholder interviews</small></li>
     <li class="fl-ns w-50-ns"><small>User scenarios and persona development</small></li>
@@ -17,11 +18,12 @@ slug: home
   </ul>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="design">
-  <h2 class="f1 mv0 measure-narrow lh-title wow animated fadeInUp">Design</h2>
-  <p class="f4 measure-wide lh-copy wow animated fadeIn">An iterative approach ensures that client goals are realized at every stage of the creative process.</p>
-  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} strives to create work that is distinct, effective, inspirational and forward-thinking.</p>
-  <ul class="list pl0 mv4 measure-wide cf mid-gray wow animated fadeIn">
-    <label class="db f6 mv1 tracked light-silver b ttu">Services</label>
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Design</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} strives to create work that is distinct, effective, inspirational and forward-thinking.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="#">Design Samples<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. {{ site.title }} builds an understanding of all the inputs and outputs of your project to create a concise and engaging approach to design.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Visual design</small></li>
     <li class="fl-ns w-50-ns"><small>Branding and identity collateral</small></li>
     <li class="fl-ns w-50-ns"><small>Style guides</small></li>
@@ -32,66 +34,97 @@ slug: home
   </ul>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="technology">
-  <h2 class="f1 mv0 measure-narrow lh-title wow animated fadeInUp">Technology</h2>
-  <p class="f4 measure-wide lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs.</p>
-  <p class="measure lh-copy wow animated fadeIn">Turn your ideas and designs into functional, reliable products and services.</p>
-  <ul class="list pl0 mv4 measure-wide cf mid-gray wow animated fadeIn">
-    <label class="db f6 mv1 tracked light-silver b ttu">Services</label>
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Technology</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="#">Resources List<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} builds across all devices, focusing on a client's entire digital ecosystem with content, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Responsive development</small></li>
     <li class="fl-ns w-50-ns"><small>Front-end engineering</small></li>
     <li class="fl-ns w-50-ns"><small>Rapid prototyping</small></li>
     <li class="fl-ns w-50-ns"><small>Pattern library development</small></li>
     <li class="fl-ns w-50-ns"><small>Technical consulting</small></li>
     <li class="fl-ns w-50-ns"><small>E-commerce consulting</small></li>
-    <li class="fl-ns w-50-ns"><small>Geographical information systems</small></li>
+    <li class="fl-ns w-50-ns"><small>Web animation development</small></li>
   </ul>
-  <div class="cf mv2">
-    <ul class="list fl w-third pl0 mid-gray wow animated fadeIn">
-      <label class="db f6 mv3 tracked light-silver b ttu">Devices</label>
+  <div class="cf">
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+      <label class="db mv3 tracked light-silver b ttu"><small>Devices</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-mobile"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-tablet"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-desktop"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-apple"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-android"></i></li>
     </ul>
-    <ul class="list fl w-third pl0 mid-gray wow animated fadeIn">
-      <label class="db f6 mv3 tracked light-silver b ttu">Browsers</label>
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+      <label class="db mv3 tracked light-silver b ttu"><small>Browsers</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-chrome"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-safari"></i></li>
-      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-firefox"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-internet-explorer"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-firefox"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-opera"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-edge"></i></li>
     </ul>
-    <ul class="list fl w-third cf mid-gray wow animated fadeIn">
-      <label class="db f6 mv3 tracked light-silver b ttu">Code</label>
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+      <label class="db mv3 tracked light-silver b ttu"><small>Code</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-html5"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-css3"></i></li>
-      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-wordpress"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-jsfiddle"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-codepen"></i></li>
+    </ul>
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+      <label class="db mv3 tracked light-silver b ttu"><small>SCM</small></label>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-git"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-github"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-bitbucket"></i></li>
+      <li class="dib mh0"><i class="fa fa-fw fa-lg fa-gitlab"></i></li>
     </ul>
   </div>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns near-white bg-blue tc">
-  <h2 class="f1 mv0 lh-title wow animated fadeInUp">Get a Quote</h2>
-  <h3 class="f3 normal lh-subtitle wow animated fadeIn">Want to work with {{ site.title }}?</h3>
-  <a class="grow no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
+<section class="ph3 ph4-ns pv3 pv5-ns near-white bg-blue tc">
+  <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
+  <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
+  <div class="wow animated fadeInUp">
+    <a class="grow no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
+  </div>
 </section>
-<section class="near-white bg-near-black dt-ns w-100" id="contact">
+<section class="dt-ns w-100 near-white bg-near-black" id="contact">
   <div class="db dtc-ns w-100 w-40-ns ph3 ph4-ns pv4 pv6-ns">
-    <h2 class="f2 mt0 lh-title wow animated fadeInUp">{{ site.title }}</h2>
-    <address class="fs-normal mb4 wow animated fadeIn">
-      <label class="db f6 mv1 mb0 tracked silver b ttu">Contact</label>
-      <ul class="list pl0 lh-copy">
-        <li><a class="link underline-hover mid-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope"></i></abbr>hello@studiocraft.cc</a></li>
-        <li><a class="link underline-hover mid-gray" href="tel:760-265-1232"><abbr title="Phone"><i class="fa fa-fw fa-phone"></i></abbr>(760) 265-1232</a></li>
-        <li><a class="link underline-hover mid-gray" href="#"><abbr title="Location"><i class="fa fa-fw fa-map-marker"></i></abbr>New York, NY</a></li>
+    <h2 class="f4 f3-ns mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">{{ site.title }}</h2>
+    <address class="fs-normal mv4 wow animated fadeInUp">
+      <label class="db mv1 tracked silver b ttu"><small>Contact</small></label>
+      <ul class="list pa0 mv0 lh-copy">
+        <li><a class="link underline-hover mid-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email" aria-hidden="true"><i class="fa fa-fw fa-envelope"></i></abbr>hello@studiocraft.cc</a></li>
+        <li><a class="link underline-hover mid-gray" href="tel:760-265-1232"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(760) 265-1232</a></li>
+        <li><a class="link underline-hover mid-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>New York, NY</a></li>
       </ul>
     </address>
-    <address class="fs-normal mb4 wow animated fadeIn">
-      <label class="f6 mv1 mb0 tracked silver b ttu">Founder &amp; Creative Director</label>
-      <ul class="list pl0 lh-copy">
+    <address class="fs-normal mv4 wow animated fadeInUp">
+      <label class="db mv1 tracked silver b ttu"><small>Founder &amp; Creative Director</small></label>
+      <ul class="list pa0 mv0 lh-copy">
         <li><span>Bryan Colosky</span></li>
-        <li><a class="link underline-hover mid-gray" href="mailto:bryan.colosky@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope"></i></abbr>bryan.colosky@studiocraft.cc</a></li>
+        <li><a class="link underline-hover mid-gray" href="mailto:bryan.colosky@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>bryan.colosky@studiocraft.cc</a></li>
       </ul>
     </address>
   </div>
-  <div class="db dn dtc-ns w-100 w-60-ns relative">
+  <div class="dn dtc-ns w-100 w-60-ns relative">
     <div id="map" class="absolute absolute--fill wow animated fadeIn" style="background-color:transparent"></div>
   </div>
+</section>
+<section class="ph3 ph4-ns pv3 pv5-ns near-black bg-near-white tc" id="mc_embed_signup">
+    <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Enter your Email</h2>
+    <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Receive {{ site.title }} updates and news.</h3>
+    <div id="mc_response"></div>
+    <div id="mc_embed_signup">
+      <form class="wow animated fadeInUp" action="http://studiocraft.us13.list-manage.com/subscribe/post-json?u=53d65332ef68bfdcc203b272f&amp;id=b81b9166ce&amp;c=?" method="GET" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+          <div class="mc-field-group input-group">
+            <input type="email" value="" name="EMAIL" class="required email w-third input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" required>
+            <label class="dn" for="mce-EMAIL">Email</label>
+          </div>
+          <input type="submit" class="input-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
+        </div>
+      </form>
+    </div>
 </section>
