--- a/index.html
+++ b/index.html
@@ -112,15 +112,11 @@ slug: home
     <div id="map" class="absolute absolute--fill wow animated fadeIn" style="background-color:transparent"></div>
   </div>
 </section>
-<section class="ph3 ph4-ns pv3 pv5-ns near-black bg-near-white tc" id="mc_embed_signup">
+<section class="ph3 ph4-ns pv3 pv5-ns near-black bg-near-white tc">
     <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Enter your Email</h2>
     <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Receive {{ site.title }} updates and news.</h3>
-
-
-
     <div id="mc_response"></div>
     <div id="mc_embed_signup">
-
       <form class="wow animated fadeInUp" action="//studiocraft.us13.list-manage.com/subscribe/post-json?u=53d65332ef68bfdcc203b272f&amp;id=da5d8d18d8&amp;c=?" method="GET" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
           <div class="mc-field-group input-group">
