--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ slug: home
     <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Receive {{ site.title }} updates and news.</h3>
     <div id="mc_response"></div>
     <div id="mc_embed_signup">
-      <form class="wow animated fadeInUp" action="//studiocraft.us13.list-manage.com/subscribe/post-json?u=53d65332ef68bfdcc203b272f&amp;id=da5d8d18d8&amp;c=?" method="GET" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <form class="wow animated fadeInUp" action="http://studiocraft.us13.list-manage.com/subscribe/post-json?u=53d65332ef68bfdcc203b272f&amp;id=b81b9166ce&amp;c=?" method="GET" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
           <div class="mc-field-group input-group">
             <label class="dn" for="mce-EMAIL">Email</label>
