--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ slug: home
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Strategy</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on design and technology as a broader approach to experience, product performance and consumer perception.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="#">Strategy Keynotes<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <a class="dib link blue underline-hover b ttu mv4" href="strategy.html">Strategy Keynotes<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">{{ site.title }} combines new tools with traditional research expertise to develop a deep understanding of the user's wants and needs, and to guide strategy, design and technology decisions.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
@@ -37,7 +37,7 @@ slug: home
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Technology</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="#">Resources List<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} builds across all devices, focusing on a client's entire digital ecosystem with content, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} builds across all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Responsive development</small></li>
@@ -86,7 +86,7 @@ slug: home
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
   <div class="wow animated fadeInUp">
-    <a class="grow no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
+    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
   </div>
 </section>
 <section class="dt-ns w-100 near-white bg-near-black" id="contact">
@@ -121,7 +121,7 @@ slug: home
         <div id="mc_embed_signup_scroll">
           <div class="mc-field-group input-group">
             <label class="dn" for="mce-EMAIL">Email</label>
-            <input type="email" value="" name="EMAIL" class="required email w-third input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" placeholder="Email">
+            <input type="email" value="" name="EMAIL" class="required w6 email w-third input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" placeholder="Email">
           </div>
         </div>
         <input type="submit" class="input-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
