--- a/strategy.html
+++ b/strategy.html
@@ -27,12 +27,20 @@ slug: strategy
   <cite class="fs-normal silver"><a class="dib link blue underline-hover b ttu" href="strategy.html">U.S. Bureau of Labor Statistics<i class="fa fa-fw fa-long-arrow-right"></i></a></cite>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns">
-  <div class="cf w-100">
-    <img src="{{ site.baseurl }}assets/images/avatar.png" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-ns w5-ns o-80 fl-ns" title="Bryan Colosky">
-    <blockquote class="fl w-100 ma0 mh3-ns w-two-thirds-l">
-      <h1 class="f2 f-5-ns mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Con<em>text</em> is king</h1>
-      <h2 class="f3 f1-ns mv0 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
-    </blockquote>
+  <div class="cf w-100" data-flickity='{ "wrapAround": true }'>
+    <center class="cf w-100">
+      <img src="{{ site.baseurl }}assets/images/avatar.png" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
+      <blockquote class="fl tl-l w-100 ma0 mh5-l measure-wide">
+        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
+        <h2 class="f3 f2-l mv0 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
+      </blockquote>
+    </center>
+    <center class="cf w-100">
+      <img src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
+      <blockquote class="fl tl-l w-100 ma0 mh5-l measure-wide">
+        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
+      </blockquote>
+    </center>
   </div>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns near-white bg-dark-gray">
@@ -45,46 +53,48 @@ slug: strategy
   </figure>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-light-red">
-  <div class="cf w-100" data-flickity>
-    <figure class="mv2 w-100 ma0-ns ph5-ns tc tl-ns">
-      <img src="https://randomuser.me/api/portraits/lego/1.jpg" class="br-100 ba bw3 b--white bg-white w-3 h3 h4-ns w4-ns o-80" title="Logen Plastiche">
-      <h2 class="f4 f3-ns lh-title tracked-tight wow animated fadeInUp">Logen Plastiche</h2>
-      <ul class="list pa0">
-        <li class="dib mr2"><abbr title="Country"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Denmark</li>
-        <li class="dib mr2"><abbr title="Gender"><i class="fa fa-fw fa-male" aria-hidden="true"></i></abbr>Male</li>
-        <li class="dib mr2"><abbr title="DOB"><i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i></abbr>33</li>
-      </ul>
-      <ul class="list pa0">
-        <li class="dib mr2"><abbr title="Education"><i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i></abbr>Mgmt. Certificate</li>
-      </ul>
-      <figcaption class="mv2 measure-wide lh-copy wow animated fadeIn">Always looking out for the little guy. Quite affectionate and outgoing.</figcaption>
-    </figure>
-    <figure class="mv2 w-100 ma0-ns ph5-ns tc tl-ns">
-      <img src="https://randomuser.me/api/portraits/lego/9.jpg" class="br-100 ba bw3 b--white bg-white w-3 h3 h4-ns w4-ns o-80" title="Mr Logan White">
-      <h2 class="f4 f3-ns lh-title tracked-tight wow animated fadeInUp">Ingrid Mould</h2>
-      <ul class="list pa0">
-        <li class="dib mr2"><abbr title="Country"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Italy</li>
-        <li class="dib mr2"><abbr title="Gender"><i class="fa fa-fw fa-female" aria-hidden="true"></i></abbr>Female</li>
-        <li class="dib mr2"><abbr title="DOB"><i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i></abbr>26</li>
-      </ul>
-      <ul class="list pa0">
-        <li class="dib mr2"><abbr title="Education"><i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i></abbr>BS</li>
-      </ul>
-      <figcaption class="mv2 measure-wide lh-copy wow animated fadeIn">Always looking out for the little guy. Quite affectionate and outgoing.</figcaption>
-    </figure>
-    <figure class="mv2 w-100 ma0-ns ph5-ns tc tl-ns">
-      <img src="https://randomuser.me/api/portraits/lego/3.jpg" class="br-100 ba bw3 b--white bg-white w-3 h3 h4-ns w4-ns o-80" title="Stephon N. Hertz">
-      <h2 class="f4 f3-ns lh-title tracked-tight wow animated fadeInUp">Stephon N. Hertz</h2>
-      <ul class="list pa0">
-        <li class="dib mr2"><abbr title="Country"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Germany</li>
-        <li class="dib mr2"><abbr title="Gender"><i class="fa fa-fw fa-male" aria-hidden="true"></i></abbr>Male</li>
-        <li class="dib mr2"><abbr title="DOB"><i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i></abbr>47</li>
-      </ul>
-      <ul class="list pa0">
-        <li class="dib mr2"><abbr title="Education"><i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i></abbr>PhD MD</li>
-      </ul>
-      <figcaption class="mv2 measure-wide lh-copy wow animated fadeIn">Always looking out for the little guy. Quite affectionate and outgoing.</figcaption>
-    </figure>
+  <div class="cf w-100" data-flickity='{ "wrapAround": true }'>
+    {% for person in site.data.personas %}
+    <article class="w-100 ph5-ns cf">
+      <center class="w-100 w-50-l tc fl">
+        <figure class="mv2 ph4-ns ma0-ns">
+          <img src="https://randomuser.me/api/portraits/lego/{{ person.id }}.jpg" class="br-100 ba bw3 b--white bg-white w-3 h3 h4-ns w4-ns o-80" title="{{ person.name }}">
+          <figcaption class="mv2 measure-wide lh-copy wow animated fadeIn">
+            <h2 class="f3 f2-ns mv2 lh-title tracked-tight wow animated fadeInUp">{{ person.name }}</h2>
+          </figcaption>
+        </figure>
+        <ul class="list pa0 mv2 mv3-ns center measure-wide wow animated fadeInUp">
+          <label class="db mv1 tracked mid-gray b ttu"><small>Demographics</small></label>
+          <li class="dib mr2"><abbr title="Country"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr><small>{{ person.demographics.location }}</small></li>
+          <li class="dib mr2"><abbr title="Gender"><i class="fa fa-fw fa-{{ person.demographics.sex }}" aria-hidden="true"></i></abbr><small>{{ person.demographics.sex }}</small></li>
+          <li class="dib mr2"><abbr title="DOB"><i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i></abbr><small>{{ person.demographics.age-group }}</small></li>
+          <li class="dib mr2"><abbr title="DOB"><i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i></abbr><small>{{ person.demographics.relationship_status }}</small></li>
+        </ul>
+        <ul class="list pa0 mv2 mv3-ns center measure-wide wow animated fadeInUp">
+          <label class="db mv1 tracked mid-gray b ttu"><small>Education and Industry</small></label>
+          <li class="dib mr2"><abbr title="Education"><i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i></abbr><small>{{ person.education_industry.degree }}</small></li>
+          <li class="dib mr2"><abbr title="Industry"><i class="fa fa-fw fa-industry" aria-hidden="true"></i></abbr><small>{{ person.education_industry.industry }}</small></li>
+        </ul>
+        <ul class="list pa0 mv2 mv3-ns center measure-wide wow animated fadeInUp">
+          <label class="db mv1 tracked mid-gray b ttu"><small>Devices</small></label>
+          <li class="dib mr2"><abbr title="Smart Phone"><i class="fa fa-fw fa-mobile" aria-hidden="true"></i></abbr><small></small></li>
+          <li class="dib mr2"><abbr title="{{ person.digital_profile.hardware.type }}"><i class="fa fa-fw fa-android" aria-hidden="true"></i></abbr><small>Android</small></li>
+          <li class="dib mr2"><abbr title="Tablet"><i class="fa fa-fw fa-laptop" aria-hidden="true"></i></abbr><small></small></li>
+          <li class="dib mr2"><abbr title="Operating System"><i class="fa fa-fw fa-windows" aria-hidden="true"></i></abbr><small>Windows</small></li>
+        </ul>
+        <ul class="list pa0 mv2 mv3-ns center measure-wide wow animated fadeInUp">
+          <label class="db mv1 tracked mid-gray b ttu"><small>Internet Use</small></label>
+          <li class="dib mr2"><abbr title="Wifi"><i class="fa fa-fw fa-wifi" aria-hidden="true"></i></abbr><small></small></li>
+          <li class="dib mr2"><abbr title="YouTube"><i class="fa fa-fw fa-youtube-play" aria-hidden="true"></i></abbr><small>YouTube</small></li>
+          <li class="dib mr2"><abbr title="Social Media"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></abbr><small>Facebook</small></li>
+        </ul>
+      </center>
+      <aside class="dn w-100 db-l w-50-l measure-wide fl">
+        <h3 class="f2-l tracked-tight measure lh-title">{{ person.quote }}</h3>
+        <p class="tl ma0 pa0 lh-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </aside>
+    </article>
+    {% endfor %}
   </div>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns near-white bg-near-black">
