--- a/strategy.html
+++ b/strategy.html
@@ -29,16 +29,17 @@ slug: strategy
 <section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns">
   <div class="cf w-100" data-flickity='{ "wrapAround": true }'>
     <center class="cf w-100">
+      <img src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
+      <blockquote class="fl tl-l w-100 ma0 mh5-l measure-wide">
+        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
+        <h2 class="f3 f2-l mv0 lh-title wow animated fadeInUp">Good design is thorough, down to the last detail.</h2>
+      </blockquote>
+    </center>
+    <center class="cf w-100">
       <img src="{{ site.baseurl }}assets/images/avatar.png" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
       <blockquote class="fl tl-l w-100 ma0 mh5-l measure-wide">
         <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
         <h2 class="f3 f2-l mv0 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
-      </blockquote>
-    </center>
-    <center class="cf w-100">
-      <img src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="db br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
-      <blockquote class="fl tl-l w-100 ma0 mh5-l measure-wide">
-        <h1 class="f1 f-5-l mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
       </blockquote>
     </center>
   </div>
@@ -60,9 +61,12 @@ slug: strategy
         <figure class="mv2 ph4-ns ma0-ns">
           <img src="https://randomuser.me/api/portraits/lego/{{ person.id }}.jpg" class="br-100 ba bw3 b--white bg-white w-3 h3 h4-ns w4-ns o-80" title="{{ person.name }}">
           <figcaption class="mv2 measure-wide lh-copy wow animated fadeIn">
-            <h2 class="f3 f2-ns mv2 lh-title tracked-tight wow animated fadeInUp">{{ person.name }}</h2>
+            <h2 class="f3 f2-l mv2 lh-title tracked-tight wow animated fadeInUp">{{ person.name }}</h2>
+            <h3 class="f4 f3-l lh-title tracked-tight measure">{{ person.quote }}</h3>
           </figcaption>
         </figure>
+      </center>
+      <aside class="dn w-100 db-l w-50-l measure-wide fl">
         <ul class="list pa0 mv2 mv3-ns center measure-wide wow animated fadeInUp">
           <label class="db mv1 tracked mid-gray b ttu"><small>Demographics</small></label>
           <li class="dib mr2"><abbr title="Country"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr><small>{{ person.demographics.location }}</small></li>
@@ -88,11 +92,8 @@ slug: strategy
           <li class="dib mr2"><abbr title="YouTube"><i class="fa fa-fw fa-youtube-play" aria-hidden="true"></i></abbr><small>YouTube</small></li>
           <li class="dib mr2"><abbr title="Social Media"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></abbr><small>Facebook</small></li>
         </ul>
-      </center>
-      <aside class="dn w-100 db-l w-50-l measure-wide fl">
-        <h3 class="f2-l tracked-tight measure lh-title">{{ person.quote }}</h3>
-        <p class="tl ma0 pa0 lh-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </aside>
+      <p class="tl ma0 pa0 lh-copy">{{ person.persona }}</p>
     </article>
     {% endfor %}
   </div>
